# hexlet-vacancy-analysis

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  PRE-COMMIT.md  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  session.session
.github/: dependabot.yml
.github/workflows/: djangoCI.yml
app/: middleware.py  settings.py  urls.py  views.py
app/frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.ts
app/frontend/docs/: PROJECT_STRUCTURE.md
app/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
app/frontend/src/hooks/: useSubscriptionForm.ts
app/frontend/src/routes/: index.ts  routes.tsx
app/frontend/src/types/: index.ts
app/services/account/: apps.py  tests.py  urls.py  views.py
app/services/ai/: apps.py  models.py  urls.py  views.py
app/services/ai/utils/: ai_client.py
app/services/auth/: common.py
app/services/auth/github/: apps.py  backend.py  tests.py  urls.py  views.py
app/services/auth/tinkoff_id/: apps.py  tests.py  urls.py  views.py
app/services/auth/users/: admin.py  apps.py  exceptions.py  models.py  tests.py  urls.py  views.py
app/services/profession/: apps.py  models.py  urls.py  views.py
app/services/telegram/: telegram_client.py
app/services/utils/: main.py
app/templates/: activation_email.html  base.html  index.html  inertia.html
app/users/: admin.py  exceptions.py  models.py  tests.py  urls.py  views.py
app/users/logic/: authentication.py  mail.py  registration.py  utils.py  validators.py
(+84 files in other folders)
